# bandwidth-test

./: .gitignore  CMakeLists.txt  plan.md
analysis/: plot_results.py  pyproject.toml
docs/: usage.md
results/bench/: mpi_sweep.json  mpi_sweep_np2.json  mpi_sweep_np8.json  zmq_client.json  zmq_inproc.json  zmq_server.json
scripts/: chunked-test.sh  mpi-test.sh  quick-test.sh  run_and_plot.sh  sweep-test.sh
src/: bandwidth_tester.cpp  bandwidth_tester.hpp  benchmark.cpp  benchmark.hpp  cli.cpp  cli.hpp  config.hpp  main.cpp  mpi_bandwidth_tester.cpp  mpi_bandwidth_tester.hpp  output.cpp  output.hpp  zmq_bandwidth_tester.cpp  zmq_bandwidth_tester.hpp
tests/: test_benchmark.cpp
